--- a/package.json
+++ b/package.json
@@ -17,6 +17,6 @@
   },
   "cypress-cucumber-preprocessor": {
     "nonGlobalStepDefinitions": true,
-    "step_definitions": "cypress/e2e/newtours"
+    "step_definitions": "cypress/e2e/Login"
   }
 }
